text align fix

--- a/styles/form.css
+++ b/styles/form.css
@@ -117,7 +117,6 @@ h1,
 h2 {
     font-family: var(--header-font);
     color: var(--dark-1);
-    text-align: left;
 }
 
 p {
@@ -131,6 +130,7 @@ header,
 footer {
     background-color: var(--light-1);
     padding: 20px;
+    text-align: center;
 }
 
 main {
